--- a/deploy/my-scheduler.yml
+++ b/deploy/my-scheduler.yml
@@ -199,7 +199,7 @@ spec:
             name: scheduler-config
       containers:
         - name: scheduler-ctrl
-          image: halegreen/sample-scheduler:v0.1.6
+          image: halegreen/sample-scheduler:latest
           imagePullPolicy: IfNotPresent
           args:
             - sample-scheduler-framework
